--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <div id="sidebar">
-            <img src="img/sayedFarid.jpg" class="w-100 rounded" alt="profile image">
+            <img src="img/sayedFarid.jpg" class="w-25 rounded-circle" alt="profile image">
             <h1>Sayed Farid Qattali</h1>
             <nav>
                 <ul>
@@ -68,7 +68,7 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="card">
                             <div class="card-body">
-                                <img src="img/abdullah.jpg" class = "card-image-top rounded" alt="profile">
+                                <img src="img/abdullah.jpg" class = "card-image-top w-25 rounded-circle" alt="profile">
                                 <p class="card-title">Abdullah Hanif</p>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="card">
                             <div class="card-body">
-                                <img src="img/ahmadSina.jpg" class = "card-image-top rounded" alt="profile">
+                                <img src="img/ahmadSina.jpg" class = "card-image-top w-25 rounded-circle" alt="profile">
                                 <p class="card-title">Ahmad Sina Saeedi</p>
                             </div>
                         </div>
