index is almost done

--- a/index.html
+++ b/index.html
@@ -1,27 +1,91 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Webpage</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="wrapper">
-            <div id="sidebar">
-                <img src="" alt="">
-                <nav>
-                    <ul>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div id="main-content">
-                <h2></h2>
-                
-            </div>
+
+<head>
+    <title>My Webpage</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="wrapper">
+        <div id="sidebar">
+            <img src="img/sayedFarid.jpg" alt="profile image">
+            <h1>Sayed Farid Qattali</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">about</a></li>
+                    <li><a href="education.html">education</a></li>
+                    <li><a href="experience.html">experienc</a></li>
+                    <li><a href="contact.html">contact</a></li>
+                </ul>
+            </nav>
         </div>
-    </body>
+        <div id="main-content">
+            <div id="about-info">
+                <h2>About</h2>
+                <p>Sayed Farid Qattali is a student of Computer Science at Herat University, Afghanistan. He was born in
+                    1998 in Herat. </p>
+            </div>
+            <div id="intrests">
+                <h3>Intersts</h3>
+                <ol>
+                    <li>Web Develpment</li>
+                    <li>Database Designing and Development</li>
+                    <li>Data Science</li>
+                    <li>Graphic Design</li>
+                    <li>Management</li>
+                </ol>
+            </div>
+
+            <div id="languages">
+                <table>
+                    <tr>
+                        <th>No</th>
+                        <th>Language</th>
+                        <th>Percentage</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>English</td>
+                        <td>80 - 85 %</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Persian</td>
+                        <td>100%</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Pushto</td>
+                        <td>70%</td>
+                    </tr>
+                </table>
+            </div>
+            <div id="friends">
+                <div class="row">
+                    <div class="col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="img/abdullah.jpg" alt="profile">
+                                <p class="card-text">Abdullah Hanif</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <img src="img/ahmadSina.jpg" alt="profile">
+                                <p class="card-text">Ahmad Sina Saeedi</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</body>
+
 </html>
