--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="card">
                             <div class="card-body">
-                                <img src="img/abdullah.jpg" class = "w-100 rounded" alt="profile">
-                                <p class="card-text">Abdullah Hanif</p>
+                                <img src="img/abdullah.jpg" class = "card-image-top rounded" alt="profile">
+                                <p class="card-title">Abdullah Hanif</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="card">
                             <div class="card-body">
-                                <img src="img/ahmadSina.jpg" class = "w-100 rounded" alt="profile">
-                                <p class="card-text">Ahmad Sina Saeedi</p>
+                                <img src="img/ahmadSina.jpg" class = "card-image-top rounded" alt="profile">
+                                <p class="card-title">Ahmad Sina Saeedi</p>
                             </div>
                         </div>
                     </div>
