index page completed

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <div class="wrapper">
         <div id="sidebar">
-            <img src="img/sayedFarid.jpg" class="w-25 rounded-circle" alt="profile image">
+            <img src="img/sayedFarid.jpg" alt="profile image">
             <h1>Sayed Farid Qattali</h1>
+            <hr>
             <nav>
                 <ul>
                     <li><a href="index.html">about</a></li>
@@ -26,7 +27,7 @@
             <div id="about-info">
                 <h2>About</h2>
                 <p>Sayed Farid Qattali is a student of Computer Science at Herat University, Afghanistan. He was born in
-                    1998 in Herat. </p>
+                    1998 in Herat. He has a quite personality and enjoys being as a helper to other people. </p>
             </div>
             <div id="intrests">
                 <h3>Intersts</h3>
@@ -40,6 +41,7 @@
             </div>
 
             <div id="languages">
+                <h3>Languages</h3>
                 <table>
                     <tr>
                         <th>No</th>
@@ -62,26 +64,6 @@
                         <td>70%</td>
                     </tr>
                 </table>
-            </div>
-            <div id="friends">
-                <div class="row">
-                    <div class="col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="img/abdullah.jpg" class = "card-image-top w-25 rounded-circle" alt="profile">
-                                <p class="card-title">Abdullah Hanif</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="img/ahmadSina.jpg" class = "card-image-top w-25 rounded-circle" alt="profile">
-                                <p class="card-title">Ahmad Sina Saeedi</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
 
         </div>
