all pageg are completed

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <title>My Webpage</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,6 +14,7 @@
         <div id="sidebar">
             <img src="img/sayedFarid.jpg" alt="profile image">
             <h1>Sayed Farid Qattali</h1>
+            <hr>
             <nav>
                 <ul>
                     <li><a href="index.html">about</a></li>
@@ -23,65 +25,13 @@
             </nav>
         </div>
         <div id="main-content">
-            <div id="about-info">
-                <h2>About</h2>
-                <p>Sayed Farid Qattali is a student of Computer Science at Herat University, Afghanistan. He was born in
-                    1998 in Herat. </p>
-            </div>
-            <div id="intrests">
-                <h3>Intersts</h3>
-                <ol>
-                    <li>Web Develpment</li>
-                    <li>Database Designing and Development</li>
-                    <li>Data Science</li>
-                    <li>Graphic Design</li>
-                    <li>Management</li>
-                </ol>
-            </div>
-
-            <div id="languages">
-                <table>
-                    <tr>
-                        <th>No</th>
-                        <th>Language</th>
-                        <th>Percentage</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>English</td>
-                        <td>80 - 85 %</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Persian</td>
-                        <td>100%</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Pushto</td>
-                        <td>70%</td>
-                    </tr>
-                </table>
-            </div>
-            <div id="friends">
-                <div class="row">
-                    <div class="col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="img/abdullah.jpg" alt="profile">
-                                <p class="card-text">Abdullah Hanif</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="img/ahmadSina.jpg" alt="profile">
-                                <p class="card-text">Ahmad Sina Saeedi</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div id="contact">
+                <h2>Contact</h2>
+                <ul>
+                    <li><i class="fas fa-envelope-square"></i></i> : sayedfaridqattaly2018@gmail.com</li>
+                    <li><i class="fab fa-linkedin"></i> : <a href="https://www.linkedin.com/in/sayed-farid-qattali-2b2163153/">Sayed Farid Qattali</a></li>
+                    <li><i class="fas fa-phone-square"></i> : (+93)797 599 353</li>
+                </ul>
             </div>
 
         </div>
