--- a/education.html
+++ b/education.html
@@ -1,27 +1,63 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Webpage</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="wrapper">
-            <div id="sidebar">
-                <img src="" alt="">
-                <nav>
-                    <ul>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div id="main-content">
-                <h2></h2>
 
-            </div>
+<head>
+    <title>My Webpage</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="wrapper">
+        <div id="sidebar">
+            <img src="img/sayedFarid.jpg" alt="profile image">
+            <h1>Sayed Farid Qattali</h1>
+            <hr>
+            <nav>
+                <ul>
+                    <li><a href="index.html">about</a></li>
+                    <li><a href="education.html">education</a></li>
+                    <li><a href="experience.html">experienc</a></li>
+                    <li><a href="contact.html">contact</a></li>
+                </ul>
+            </nav>
         </div>
-    </body>
+        <div id="main-content">
+            <div id="education">
+                <h2>Education</h2>
+                <table class="table table-stripe table-bordered">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>degree</th>
+                            <th>School / University</th>
+                            <th>start year</th>
+                            <th>end year</th>
+                        </tr>
+                    </thead>
+                    <tr>
+                        <td>High School</td>
+                        <td>Sultan Ghiyasudding</td>
+                        <td>2005</td>
+                        <td>2017</td>
+                    </tr>
+                    <tr>
+                        <td>Bachlor's of Computer Science</td>
+                        <td>Herat University</td>
+                        <td>2017</td>
+                        <td>2021</td>
+                    </tr>
+                    <tr>
+                        <td>English Diploma</td>
+                        <td>Erteqa Academy</td>
+                        <td>2018</td>
+                        <td>2019</td>
+                    </tr>
+                </table>
+            </div>
+
+        </div>
+    </div>
+</body>
+
 </html>
