--- a/experience.html
+++ b/experience.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Webpage</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="wrapper">
-            <div id="sidebar">
-                <img src="" alt="">
-                <nav>
-                    <ul>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div id="main-content">
-                <h2></h2>
 
-            </div>
+<head>
+    <title>My Webpage</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="wrapper">
+        <div id="sidebar">
+            <img src="img/sayedFarid.jpg" alt="profile image">
+            <h1>Sayed Farid Qattali</h1>
+            <hr>
+            <nav>
+                <ul>
+                    <li><a href="index.html">about</a></li>
+                    <li><a href="education.html">education</a></li>
+                    <li><a href="experience.html">experienc</a></li>
+                    <li><a href="contact.html">contact</a></li>
+                </ul>
+            </nav>
         </div>
-    </body>
+        <div id="main-content">
+            <div id="experience">
+                <h2>experience</h2>
+                <ol>
+                    <li>High School teacher, 2017-2018</li>
+                    <li>Academic Manager, 2018-2019</li>
+                    <li>Team Manager, 2019 till now</li>
+                </ol>
+            </div>
+
+        </div>
+    </div>
+</body>
+
 </html>
