Mistakes are removed from all pages

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="index.html">about</a></li>
                     <li><a href="education.html">education</a></li>
-                    <li><a href="experience.html">experienc</a></li>
+                    <li><a href="experience.html">experience</a></li>
                     <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
